@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.10 2004/10/10 17:48:34 jdolecek Exp $
+$NetBSD: distinfo,v 1.11 2004/10/25 17:40:01 jdolecek Exp $
 
-SHA1 (postgresql-7.3.7.tar.gz) = 5c3c865146a531cb49427672483c9cba6f14ddf8
-Size (postgresql-7.3.7.tar.gz) = 11284024 bytes
+SHA1 (postgresql-7.3.8.tar.gz) = bd27703cbcc219d36521a0e57233408a6f70b342
+Size (postgresql-7.3.8.tar.gz) = 11293472 bytes
 SHA1 (patch-aa) = 4740338ad87748c6619eb674808c11e1b57826af
